--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "swc ./src -d build"
+    "build": "swc ./src -d build",
+    "start": "npm run build && node -r dotenv/config ./build/index.js"
   },
   "keywords": [],
   "author": "",
